{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 49,
  "lineage": "44fa8063-9bd9-60c5-4d75-93dc22a31e82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "meip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bce161df443fb9dc",
            "domain": "vpc",
            "id": "eipalloc-073bb2c560d06f287",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09e45be157b78162b",
            "private_dns": "ip-10-0-28-198.us-east-2.compute.internal",
            "private_ip": "10.0.28.198",
            "public_dns": "ec2-3-140-163-109.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.163.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:415216890706:instance/i-0696690f4e9f53e8f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0696690f4e9f53e8f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myip",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de2fb25e23fd87fe",
            "private_dns": "ip-10-0-82-71.us-east-2.compute.internal",
            "private_ip": "10.0.82.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0984eca9ce3e67dbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063abaf84e935b3d7",
            "tags": {
              "Name": "db-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049b4a78b9ff8e033"
            ]
          },
          "dependencies": [
            "aws_security_group.openssh",
            "aws_subnet.priv-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:415216890706:instance/i-01b3f64ea6b1260dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b3f64ea6b1260dd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myip",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05dd6cf6dac70abb6",
            "private_dns": "ip-10-0-20-179.us-east-2.compute.internal",
            "private_ip": "10.0.20.179",
            "public_ip": "3.137.139.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f83c79294fa5e11e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0392d70b072cad611",
            "tags": {
              "Name": "Apahe-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049b4a78b9ff8e033"
            ]
          },
          "dependencies": [
            "aws_security_group.openssh",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pub-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:internet-gateway/igw-0a54ca9eeed50f265",
            "id": "igw-0a54ca9eeed50f265",
            "owner_id": "415216890706",
            "tags": {
              "Name": "myvpc-igw"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073bb2c560d06f287",
            "id": "nat-0d43c2f20eef6fe71",
            "network_interface_id": "eni-09e45be157b78162b",
            "private_ip": "10.0.28.198",
            "public_ip": "3.140.163.109",
            "subnet_id": "subnet-0392d70b072cad611",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.meip",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c710ad6584d49707",
            "owner_id": "415216890706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d43c2f20eef6fe71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv-rt"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cf24d737d1357f21",
            "owner_id": "415216890706",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a54ca9eeed50f265",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pub-gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subassocaiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072742d6216d69a1f",
            "route_table_id": "rtb-0c710ad6584d49707",
            "subnet_id": "subnet-063abaf84e935b3d7"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_route_table.priv-rt",
            "aws_subnet.priv-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0533a8cd3e20f4153",
            "route_table_id": "rtb-0c710ad6584d49707",
            "subnet_id": "subnet-0c8af5944ce294e2a"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_route_table.priv-rt",
            "aws_subnet.priv-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0958ffa0102403562",
            "route_table_id": "rtb-0c710ad6584d49707",
            "subnet_id": "subnet-06116b5abea8bb9ea"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_route_table.priv-rt",
            "aws_subnet.priv-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subassocaiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2618d6b3f91b1e4",
            "route_table_id": "rtb-0cf24d737d1357f21",
            "subnet_id": "subnet-0392d70b072cad611"
          },
          "dependencies": [
            "aws_internet_gateway.pub-gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01404ba451ac45f23",
            "route_table_id": "rtb-0cf24d737d1357f21",
            "subnet_id": "subnet-02406bbf26ef3484f"
          },
          "dependencies": [
            "aws_internet_gateway.pub-gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044ce04f96e1f1066",
            "route_table_id": "rtb-0cf24d737d1357f21",
            "subnet_id": "subnet-0d2177246fd2b5a41"
          },
          "dependencies": [
            "aws_internet_gateway.pub-gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:security-group/sg-049b4a78b9ff8e033",
            "description": "Allow TCP connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049b4a78b9ff8e033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP from SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "openSSH",
            "name_prefix": "",
            "owner_id": "415216890706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-063abaf84e935b3d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-063abaf84e935b3d7",
            "map_public_ip_on_launch": false,
            "owner_id": "415216890706",
            "tags": {
              "Name": "priv-sub-0"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-0c8af5944ce294e2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.128.0/18",
            "id": "subnet-0c8af5944ce294e2a",
            "map_public_ip_on_launch": false,
            "owner_id": "415216890706",
            "tags": {
              "Name": "priv-sub-1"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-06116b5abea8bb9ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.192.0/18",
            "id": "subnet-06116b5abea8bb9ea",
            "map_public_ip_on_launch": false,
            "owner_id": "415216890706",
            "tags": {
              "Name": "priv-sub-2"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-0392d70b072cad611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0392d70b072cad611",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub-sub-0"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-02406bbf26ef3484f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-02406bbf26ef3484f",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub-sub-1"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:subnet/subnet-0d2177246fd2b5a41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0d2177246fd2b5a41",
            "map_public_ip_on_launch": true,
            "owner_id": "415216890706",
            "tags": {
              "Name": "pub-sub-2"
            },
            "vpc_id": "vpc-0c9aff8bc50a86cf1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:415216890706:vpc/vpc-0c9aff8bc50a86cf1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078e60cabeeb28432",
            "default_route_table_id": "rtb-018d2a79c69b8604f",
            "default_security_group_id": "sg-0a27872473a90118e",
            "dhcp_options_id": "dopt-313e5c58",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c9aff8bc50a86cf1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018d2a79c69b8604f",
            "owner_id": "415216890706",
            "tags": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}